# WanHunFan-Cyber-company

./: .env.example  .gitignore  README.md  demo.md  environment.yml  pyproject.toml  requirements.txt
colleagues/bai_jian/: meta.json  persona.md  work.md
colleagues/cheng_che/: SKILL.md  meta.json
colleagues/fang_luo/: meta.json  persona.md
colleagues/gu_zhun/: meta.json  work.md
colleagues/han_xiao/: work.md
colleagues/he_ning/: meta.json  work.md
colleagues/jiang_shuo/: SKILL.md  meta.json  work.md
colleagues/lin_qiao/: meta.json  persona.md
colleagues/lu_chen/: meta.json  persona.md
colleagues/luo_yan/: SKILL.md  persona.md  work.md
colleagues/pei_chuan/: SKILL.md
colleagues/qiao_lan/: SKILL.md
colleagues/song_yue/: meta.json  work.md
colleagues/su_he/: work.md
colleagues/tang_yu/: SKILL.md  persona.md  work.md
colleagues/wei_cheng/: SKILL.md
colleagues/xu_tang/: meta.json  persona.md
colleagues/ye_heng/: SKILL.md  meta.json
colleagues/zhou_yao/: SKILL.md  persona.md
company_data/: provider.yaml.example
company_embodied/: bai_jian.md  cheng_che.md  fang_luo.md  gu_zhun.md  han_xiao.md  he_ning.md  jiang_shuo.md  lin_qiao.md  lu_chen.md  luo_yan.md  pei_chuan.md  qiao_lan.md  shen_wei.md  song_yue.md  su_he.md  tang_yu.md  wei_cheng.md  xu_tang.md  ye_heng.md  zhou_yao.md
company_platform/: __init__.py  api.py  cli.py  config.py  models.py  repository.py
company_platform/providers/: __init__.py  base.py  claude_provider.py  mock.py  (+3 more)
scripts/: generate_company_embodied.py  setup_conda.sh
tests/: test_company_platform.py
(+74 files in other folders)
